# muminizinc

./: .clang-format  .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: MuMiniZincConfig.cmake.in  config.hpp.in
cmake/configured_files/: config.hpp.in
docker/: muminizinc  muminizinc.cmd  muminizinc.ps1
include/: arguments.hpp  case_insensitive_string.hpp  executor.hpp  logging.hpp  mutation.hpp  operators.hpp
include/muminizinc/: case_insensitive_string.hpp  executor.hpp  logging.hpp  mutation.hpp  operators.hpp
include/operators/: mutator.hpp
src/: arguments.cpp  executor.cpp  main.cpp  mutation.cpp  operators.cpp
src/operators/: mutator.cpp
tests/: CMakeLists.txt  test_arguments.cpp  test_execution.cpp  test_mutant_arithmetic.cpp  test_mutant_boolean.cpp  test_mutant_call_argument_swap.cpp  test_mutant_call_swap.cpp  test_mutant_calls.cpp  test_mutant_relational.cpp  test_mutant_set.cpp  test_mutant_unary.cpp  test_mutation.cpp  test_mutation_model.cpp  test_operator_aor.cpp  test_operator_cor.cpp  test_operator_fas.cpp  test_operator_fcr.cpp  test_operator_ror.cpp  test_operator_sor.cpp  test_operator_uod.cpp  test_operator_utils.hpp
tests/data/: arithmetic.mzn  call_argument_swap.mzn  call_swap.mzn  cor.mzn  enums.mzn  no_mutants.mzn  relational-2.dzn  relational.mzn  ror.mzn  sor.mzn  unary.mzn
